clusters/homelab/victoriametrics/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics-redirect
  namespace: monitoring
spec:
  parentRefs:
  - name: homelab
    namespace: gateway
    sectionName: http
  hostnames:
  - victoriametrics.itruslan.ru
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: victoriametrics.itruslan.ru
spec:
  parentRefs:
  - name: homelab
    namespace: gateway
    sectionName: https
  hostnames:
  - victoriametrics.itruslan.ru
  rules:
  - backendRefs:
    - name: vmsingle-vm
      port: 8428
